Testing-Nginx/testing-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-nginx
  name: test-nginx
  namespace: testing
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-nginx
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: test-nginx
    spec:
      containers:
        - env:
          - name: MY_NODE_NAME
            valueFrom:
              fieldRef:
                fieldPath: spec.nodeName
          - name: MY_POD_NAME
            valueFrom:
              fieldRef:
                fieldPath: metadata.name
          image: nginx:latest
          imagePullPolicy: Always
          name: test-nginx
          ports:
            - containerPort: 80
              name: test-nginx
              protocol: TCP
