Testing-Nginx/testing-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-nginx
  name: test-nginx-svc
  namespace: Testing
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: test-nginx
